Modify site styles.

--- a/source/_includes/site/head.html
+++ b/source/_includes/site/head.html
@@ -27,6 +27,7 @@
     {% if page.facebook.image %}<meta property="og:image" content="{{ page.facebook.image }}">{% endif %}
     {% endif %}
     <link href="{{ root_url }}/favicon.png" rel="icon">
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400' rel='stylesheet' type='text/css'>
     <link href="{{ root_url }}/stylesheets/screen.css" media="screen, projection" rel="stylesheet">
     <link href="{{ root_url }}{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
   </head>
