--- a/sass/oscailte/_variables.scss
+++ b/sass/oscailte/_variables.scss
@@ -4,8 +4,10 @@ $responsive:        true;
 $use-gridfix:       true;
 
 // Fonts & Font Families
-$serif: Georgia, 'Times New Roman', Times, serif !default;
-$sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+// $serif: Georgia, 'Times New Roman', Times, serif !default;
+// $sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$sans-serif: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$serif: $sans-serif;
 
 // Grays
 // -------------------------
