--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,5 +1,7 @@
 <div class="grid__item two-fifths lap-four-sixths palm-one-whole">
-  <a href="{{ root_url }}/" class="site-title">{{ site.title }}</a>
+  <a href="{{ root_url }}/" class="site-title">
+    <img src="/images/tkbctf_header.png" width="300" height="70" alt="{{ site.title }}">
+  </a>
 </div>
 
 <div class="grid__item three-fifths lap-two-sixths palm-one-whole">
