--- a/source/_includes/site/hero_unit.html
+++ b/source/_includes/site/hero_unit.html
@@ -1,8 +1,8 @@
-<div class="hero" style="background-image: url('/images/cliffs_of_moher.jpg');">
+<div class="hero" style="background-color: #85bc37;">
   <div class="grid-wrapper">
     <div class="grid flex">
-      <div class="grid__item flex__item two-fifths palm-one-whole avatar">
-        <img class="gravatar" src="/images/gravatar.jpg" alt="{{ site.author }}'s Picture"{% if site.email and site.gravatar != false %} data-gravatar="{{ site.email }}"{% endif %}>
+      <div class="grid__item flex__item two-fifths palm-one-whole">
+        <img src="/images/capture_the_future.png">
       </div>
       <div class="grid__item flex__item three-fifths palm-one-whole">
       {% include custom/welcome.html %}
@@ -11,8 +11,6 @@
   </div>
 
   <div class="credit">
-    <p>
-      Cliffs of Moher, by <a href="http://www.flickr.com/photos/alfarese/2780612581/" target="_blank">Alessandro Farese</a> <a href="http://creativecommons.org/licenses/by-nc-nd/2.0/deed.en" target="_blank" class="licence"><small>(by-nc-nd)</small></a>
-    </p>
+    <p>"CAPTURE THE FUTURE." image by <a href="https://twitter.com/polamjag">@polamjag</a></p>
   </div>
 </div>
