--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,4 +1,5 @@
 <p class="copyright">
-  All content by {{ site.author }} and licenced under <a href="//creativecommons.org/licenses/by-nc-sa/3.0/ie/">Creative Commons</a>.<br>
-  Code under <a href="//github.com/coogie/oscailte/blob/master/README.md">MIT Licence</a>.
+  Copyright &copy; {{ site.time | date: "%Y" }} {{ site.author }}<br>
+  The contents of this blog are licenced under <a rel="license" href="//creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a> except as particularly mentioned.<br>
+  Powered by <a href="http://octopress.org/">Octopress</a> with <a href="https://github.com/coogie/oscailte/">Oscailte</a> theme
 </p>
