--- a/source/_includes/site/head.html
+++ b/source/_includes/site/head.html
@@ -26,7 +26,7 @@
     {% if site.social.facebook %}<meta property="og:author" content="https://facebook.com/{{ site.social.facebook }}">{% endif %}
     {% if page.facebook.image %}<meta property="og:image" content="{{ page.facebook.image }}">{% endif %}
     {% endif %}
-    <link href="{{ root_url }}/favicon.png" rel="icon">
+    <link href="{{ root_url }}/favicon.ico" rel="icon" type="image/x-icon">
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400' rel='stylesheet' type='text/css'>
     <link href="{{ root_url }}/stylesheets/screen.css" media="screen, projection" rel="stylesheet">
     <link href="{{ root_url }}{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
