--- a/sass/oscailte/_variables.scss
+++ b/sass/oscailte/_variables.scss
@@ -52,8 +52,8 @@ $footer-height: 100px;
 
 // Site colors
 // -------------------------
-$primary-color:     $blue;
-$secondary-color:   $green;
+$primary-color:     $green;
+$secondary-color:   $blue;
 // -------------------------
 $site-background:   #F5F5F5;
 $header-background: $white;
