Make footer flexible :)

--- a/sass/oscailte/_variables.scss
+++ b/sass/oscailte/_variables.scss
@@ -48,7 +48,7 @@ $sites:
 
 // Site footer
 // -------------------------
-$footer-height: 100px;
+$footer-height: 10em;
 
 // Site colors
 // -------------------------
