--- a/source/_includes/custom/welcome.html
+++ b/source/_includes/custom/welcome.html
@@ -1,5 +1,5 @@
-<h1>NEXT: tkbctf3</h1>
+<h1>tkbctf</h1>
 <hr>
 <p class="lead">
-tkbctf3 will take place on 4 &amp; 5 May
+CAPTURE THE FUTURE.
 </p>
