Modify welcome message for tkbctf4.

--- a/source/_includes/custom/welcome.html
+++ b/source/_includes/custom/welcome.html
@@ -1,5 +1,5 @@
-<h1>tkbctf</h1>
+<h1>NEXT &#10143; tkbctf4</h1>
 <hr>
 <p class="lead">
-CAPTURE THE FUTURE.
+  tkbctf4 will be held on Nov. 2nd &amp; 3rd.
 </p>
