--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,7 +1,6 @@
 <div class="grid__item two-fifths lap-four-sixths palm-one-whole">
   <a href="{{ root_url }}/" class="site-title">
-    <!-- <img src="/images/tkbctf_header.png" width="300" height="70" alt="{{ site.title }}"> -->
-    <img src="/images/4th_logo.png" width="249" height="66" alt="{{ site.title }}">
+    <img src="/images/tkbctf_header.png" width="300" height="70" alt="{{ site.title }}">
   </a>
 </div>
 
